update deleteUserById
